--- a/TEST 3.3.1.html
+++ b/TEST 3.3.1.html
@@ -65,32 +65,32 @@ header {
 			<p><iframe src="http://www.pinuno.nl" height="615" width="775"></iframe></p>
 		</div>
 		<div class="column" style="background-color:#bbb;">
-		<p>Considering the merit and demerit of all the website in the iframe, we can first look at what a good website constitue of, a good website should have the following deployed within the contents of the website.
-				<br> we can talk of the following, firstly;<br>
+		<p>Considering the merit and demerit of all the website in the iframe, we can first look at what a good website constitue of, a good website should have the following deployed within the contents of the website.</p>
+			 we can talk of the following, firstly;
 				<ul>
 					<li>A good website should at all time open to business 7 days within a week and 365 days in a year in other to serve customers at all times where ever, of which these website is. <br> Next to look out for is that the website should showcase it works talk of what the business does, which people makes up the company, also their routin of work with images for proof, but then i see on the header "what we do" which is good.</li>
-					<p> <li> Secondly a good website should have good customer satifaction, good customer satifaction is in realtion to satisfaction in terms of customer care. keeping online help, FAQ and other important information which is helpful to customers, i think this website makes customersatifaction key</li></p>
+					<p> <li> Secondly a good website should have good customer satifaction, good customer satifaction is in relation to satisfaction in terms of customer care. keeping online help, FAQ and other important information which is helpful to customers, i think this website makes customersatifaction key</li></p>
 					<li>The third thing to also consider is that this website is dynamic, means from the source code people can see the webpage differently depending on the following </li>
 						<ol> 
-							<li>The device that the user is using, whether mobile phone or computer</li>
+							<li>The device that the user is using, whether mobile phone or a computer</li>
 							<li>The type of operating system and browser being used by the user </li>
 							<li>The source location that referred the visitor</li>
 							<li>Finally, the geographical location of the user will influence his/her language </li>
 						</ol>
-				   <p> And clearly without doubt, the website  has being able to fulfil these requirment which makes it a good website, it has broken language barries by including three differents languages which makes it easy for anyone irrespective of location to visit the websit.</p>
+				   <p> And clearly without doubt, the website  has being able to fulfil these requirement which makes it a good website, it has broken language barries by including three different languages which makes it easy for anyone irrespective of location to visit the website/webpage.</p>
 				</ul> 
 				One should bear in mind that, there are also few skills required that must be met to have and create a simple website<br>
 				1. computer operation - one should able to operate a basic computer, which in this case may comprise of creating file, deleting file, updating file, directory creation and file permission <br>
 				2. Remote access - one should be able to connect computers across the network, because web server wil be accessed from remote site only<br>
 				3. file upload and download -  because your webserver will be on a remote site, you will have to upload files related to your website <br>
-				4. knownledge in HTML - These are markup languages used to build the website, 
-		</p><!--BAD, such long paragraphs with nested elements and other paragraphs is not good for readability of code and formating as well. Redo this section properly closing tags and applying xhtml standards -->
+				4. knownledge in HTML - These are markup languages used to build a website, 
+		     <!--BAD, such long paragraphs with nested elements and other paragraphs is not good for readability of code and formating as well. Redo this section properly closing tags and applying xhtml standards -->
 		</div>
 	</div>
 <p><hr/></p>
 <div class="row">
 	<div class="column" style="background-color:lightblue">
-		<p> <iframe src="http://dev.pinuno.com.gh" height="615" width="755"></iframe></p><!--The subdoamin is http://dev.pinuno.com.gh. why did you add www to it? -->
+		<p> <iframe src="http://dev.pinuno.com.gh" height="615" width="755"></iframe></p><!--The subdoamin is http://dev.pinuno.com.gh. why did you add www to it? Sir please i did not spot it -->
 	</div>
 	<div class="column" style="background-color:lightblue">
 		<p> Also from careful observation  of <a href="http://dev.pinuno.com.gh">dev.pinuno.com.gh</a> i can conclude on these merit and demerit, first to talk of is that dev.pinuno.com.gh is a website under development, <br>development website meaning that this site is under construction, it can change anytime anyday since it is still being developed, every website should follow a set of standarad format,
@@ -98,11 +98,11 @@ header {
 	        <ul>
 	            <li> HOME</li>
 	            <li> ABOUT</li>
-	            <LI> GALLERY</LI><!--Consistency is very appreciated by developers, apply xhtml standards -->
+	            <li> GALLERY</li><!--Consistency is very appreciated by developers, apply xhtml standards -->
 	            <li> SERVICES</li>
 	            <li> CONTACT</li>
 	        </ul>
-	        <p> These things are vital and must appear on every good webpage and these website clearly contains all the basic and important forms and pages that every good business website should possess, we realize that this website contains a header which has the website <br> 
+	        <p> These things are vital and must appear on every good webpage and these website clearly contains all the basic and important forms and pages that every good business website should possess, we realize that this website contains a header which has the website </p>
 	            <ol>
 	                <li> contact</li>
 	                <li> About</li>
@@ -119,17 +119,19 @@ header {
                             users might visit your site with a computer, a mobile phone, with a different browser and he/she should be able to access your website. looking at <strong>www.dev.pinuno.com.gh</strong>  is a website that is Dynamic in it sense which is good for a business, i tried to log in to these site with a mobile phone and was accessible without any problem. That is what we simply mean by dynamesim.<br>
 	            </p>
 			</p>
-		</p><!--Again apply xhtml standards and avoid long p with nested elements -->
+	    <!--Again apply xhtml standards and avoid long p with nested elements -->
 	</div>
 </div>
-<p><hr /></p><!--With the paragraph, hr can stand on its own. Why did you put the <p> around it? -->
-<p>the first website in the iframe, www.pinuno.nl contains a header </p>
-<iframe src="http://www.pinuno.com.gh" width="770" height="500"> this is </iframe><!--Why is this iframe not in a paragraph? -->
+
+   <hr><!--With the paragraph, hr can stand on its own. Why did you put the <p> around it? to create a horizontal space-->
+
+ 
+<p><iframe src="http://www.pinuno.com.gh" width="770" height="500"> this is </iframe></p><!--Why is this iframe not in a paragraph? please it escaped me, will come to correct it, since i was not done-->
 <p>  The website <a href="htttp://www.pinuno.com.gh">www.pinuno.com.gh</a> is a site that almost satisfies most of the requirment of a business website, particular it is <br> a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but <br>
 	each link do not respond to a click with the mouse, which indicate that this website is a <em>static</em> website.
     we say a site is static<br>when the information is displayed within the same page of the site beside, it usually written in plain HTML and what is in the <br>code of the page is what is displayed to the user. Which makese it sometimes easier to develop. <br> but it requires expect to update it contents,     
 </p>
 <footer align="center"> <p> cont:0508-232-196, email:m.akyempon@pinuno.com.gh</p></footer>       
-<!--Overall check your spelling, and use report writing guidelines to structure the document-->                    
+<!--Overall check your spelling, and use report writing guidelines to structure the document-- okay Sir, thanks for the corrections>                    
 </body>
 </html>
