--- a/TEST 3.3.1.html
+++ b/TEST 3.3.1.html
@@ -69,7 +69,7 @@ header {
 			 we can talk of the following, firstly;
 				<ul>
 					<li>A good website should at all time open to business 7 days within a week and 365 days in a year in other to serve customers at all times where ever, of which these website is. <br> Next to look out for is that the website should showcase it works talk of what the business does, which people makes up the company, also their routin of work with images for proof, but then i see on the header "what we do" which is good.</li>
-					<p> <li> Secondly a good website should have good customer satifaction, good customer satifaction is in relation to satisfaction in terms of customer care. keeping online help, FAQ and other important information which is helpful to customers, i think this website makes customersatifaction key</li></p>
+					<p> <li> Secondly a good website should have good customer satifaction, good customer satifaction is in relation to satisfaction in terms of customer care. keeping online help, FAQ and other important information which is helpful to customers, i think this website makes customer satifaction keen</li></p>
 					<li>The third thing to also consider is that this website is dynamic, means from the source code people can see the webpage differently depending on the following </li>
 						<ol> 
 							<li>The device that the user is using, whether mobile phone or a computer</li>
@@ -108,7 +108,7 @@ header {
 	                <li> About</li>
 	                <li> what we do</li>
 	            </ol>
-				<p>Also a good business website should be Dynamic, Dynamic in the sense that the website should be able to display differents content to the user,basesd on some of these parameters
+				<p>Also a good business website should be Dynamic, Dynamic in the sense that the website should be able to display differents content to the user,basesd on some of these parameters;
 	                <ul number>
 	                    <li>What operating system or browser the visitor is using.</li>
 	                    <li>Whether the user is using a computer or a mobile device.</li>
@@ -117,17 +117,29 @@ header {
 	                </ul> 
 	                <br> DYNAMIC website is the latest trend used for developing a website/webpage for public consumption,
                             users might visit your site with a computer, a mobile phone, with a different browser and he/she should be able to access your website. looking at <strong>www.dev.pinuno.com.gh</strong>  is a website that is Dynamic in it sense which is good for a business, i tried to log in to these site with a mobile phone and was accessible without any problem. That is what we simply mean by dynamesim.<br>
-	            </p>
-			</p>
+	           
 	    <!--Again apply xhtml standards and avoid long p with nested elements -->
 	</div>
 </div>
+
+<h3 align="center"> suggestions to improve <a href="http://dev.pinuno.comm.gh"> dev.pinuno.com.gh </a> website </h3>
+<p>dev.pinuno.com.gh is a website that is under development, which is subject to change almost every now and then. dev from the name of the website simply means DEVELOPMENT, which speaks for it self that the site is under construction. <br>
+the website is accessible on all devices in other words the site is mobile friendly, but then i will suggest the following; 
+<ul> <li> Social proof, we should have quote or sayings from folks who have used our product or acquire our service, this can be used to entice people to buy or hire our service if they need,also
+that people can have confidence in us.</li>
+<li> I suggest also that we should have a page of testimonies about client who have used our service.</li>
+ <li>I suggest that there should be a page that invloves the team that makes up the company Pinuno Software, people would want to know and trust before doing business, and business is between people 
+ so i think we should have a page of our team so that visitors can believe and do business with us</li>
+ <li> </li>
+ </ul>
+
+  </p>
 
    <hr><!--With the paragraph, hr can stand on its own. Why did you put the <p> around it? to create a horizontal space-->
 
  
 <p><iframe src="http://www.pinuno.com.gh" width="770" height="500"> this is </iframe></p><!--Why is this iframe not in a paragraph? please it escaped me, will come to correct it, since i was not done-->
-<p>  The website <a href="htttp://www.pinuno.com.gh">www.pinuno.com.gh</a> is a site that almost satisfies most of the requirment of a business website, particular it is <br> a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but <br>
+<p>  The website <a href="htttp://www.pinuno.com.gh">www.pinuno.com.gh </a> is a site that almost satisfies most of the requirment of a business website, particular it is <br> a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but <br>
 	each link do not respond to a click with the mouse, which indicate that this website is a <em>static</em> website.
     we say a site is static<br>when the information is displayed within the same page of the site beside, it usually written in plain HTML and what is in the <br>code of the page is what is displayed to the user. Which makese it sometimes easier to develop. <br> but it requires expect to update it contents,     
 </p>
