added a contact form

--- a/hope.foundation.net/index.html
+++ b/hope.foundation.net/index.html
@@ -212,21 +212,27 @@
 </nav>
 <div class="jumbotron text-center">
   <h1>HOPE FOR HOPELESS FOUNDATION</h1> 
-  <p>Orphanage in Ghana offering the less-privileged the best of education, health, love and facilities</p>  
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+  </p>  
 </div>
 <!-- Container (Vision Section) -->
 <div id="vision" class="container-fluid bg-1 text-center">
-  <h3 class="margin">What we do</h3> 
+  <h2 class="margin">Our vision</h2> 
   <h3>Orphanage in Ghana</h3>
   <p>
-	We aspire to become the leading orphanage in Ghana offering the less-privileged the best of education, health, love and facilities, positively influencing the religious life of these kids and imbibing in them the qualities of character, service, leadership and responsible living.
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
   </p>
 </div>
 
 <!-- Container (Projects Section) -->
 <div id="projects" class="container-fluid text-center">
-  <h3 class="margin">Meet our some of our guests</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+  <h2 class="margin">Projects</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+  </p>
   <div class="row slideanim">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-user logo-small"></span>
@@ -266,14 +272,30 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
+  <h2 class="text-center">Contact</h2>
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-5">
       <p>We like to hear from you</p>
       <p><span class="glyphicon glyphicon-map-marker"></span> Buduatta Junction, Ghana</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +233 12345678</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +233 1234567890</p>
       <p><span class="glyphicon glyphicon-envelope"></span> info@hopefoundation.net</p>
-    </div>   
+    </div>
+	<div class="col-sm-7 slideanim">
+	  <div class="row">
+		<div class="col-sm-6 form-group">
+		  <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+		</div>
+		<div class="col-sm-6 form-group">
+		  <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+		</div>
+	  </div>
+	  <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br/>
+	  <div class="row">
+		<div class="col-sm-12 form-group">
+		  <button class="btn btn-default pull-right" type="submit">Send</button>
+		</div>
+	  </div>
+	</div>
   </div>
 </div>
 
