--- a/TEST 3.3.1.html
+++ b/TEST 3.3.1.html
@@ -53,6 +53,7 @@ header {
     font-size: 15px;
     color: white;
 
+	
 		
 </style>
 </head>
@@ -61,10 +62,10 @@ header {
 	   <h2 align="center">PROJECT ON HTML STUDIES</h2>
 	 </header>
 	<div class="row"><!-- Good applying CSS grids-->
-		 <div class="column" style="background-color:#aaa;">
+		 <div class="column" style="background-color:lightblue;">
 			<p><iframe src="http://www.pinuno.nl" height="615" width="775"></iframe></p>
 		</div>
-		<div class="column" style="background-color:#bbb;">
+		<div class="column" style="background-color:lightblue;">
 		<p>Considering the merit and demerit of all the website in the iframe, we can first look at what a good website constitue of, a good website should have the following deployed within the contents of the website.</p>
 			 we can talk of the following, firstly;
 				<ul>
@@ -87,13 +88,15 @@ header {
 		     <!--BAD, such long paragraphs with nested elements and other paragraphs is not good for readability of code and formating as well. Redo this section properly closing tags and applying xhtml standards -->
 		</div>
 	</div>
-<p><hr/></p>
+	<br>
+      
 <div class="row">
 	<div class="column" style="background-color:lightblue">
 		<p> <iframe src="http://dev.pinuno.com.gh" height="615" width="755"></iframe></p><!--The subdoamin is http://dev.pinuno.com.gh. why did you add www to it? Sir please i did not spot it -->
 	</div>
 	<div class="column" style="background-color:lightblue">
-		<p> Also from careful observation  of <a href="http://dev.pinuno.com.gh">dev.pinuno.com.gh</a> i can conclude on these merit and demerit, first to talk of is that dev.pinuno.com.gh is a website under development, <br>development website meaning that this site is under construction, it can change anytime anyday since it is still being developed, every website should follow a set of standarad format,
+		<p> Also from careful observation  of <a href="http://dev.pinuno.com.gh">dev.pinuno.com.gh</a> i can conclude on these merit and demerit, first to talk of is that dev.pinuno.com.gh is a website under development,
+		<br>development website meaning that this site is under construction, it can change anytime anyday since it is still being developed, every website should follow a set of standarad format,
                        the most important ones to find on the page includes
 	        <ul>
 	            <li> HOME</li>
@@ -116,14 +119,15 @@ header {
 	                    <li>If the visitor has done a purchase before from an online shop, etc.</li>
 	                </ul> 
 	                <br> DYNAMIC website is the latest trend used for developing a website/webpage for public consumption,
-                            users might visit your site with a computer, a mobile phone, with a different browser and he/she should be able to access your website. looking at <strong>www.dev.pinuno.com.gh</strong>  is a website that is Dynamic in it sense which is good for a business, i tried to log in to these site with a mobile phone and was accessible without any problem. That is what we simply mean by dynamesim.<br>
+                            users might visit your site with a computer, a mobile phone, with a different browser and he/she should be able to access your website. looking at <strong>www.dev.pinuno.com.gh</strong>  
+							is a website that is Dynamic in it sense which is good for a business, i tried to log in to these site with a mobile phone and was accessible without any problem. That is what we simply mean by dynamesim.<br>
 	           
 	    <!--Again apply xhtml standards and avoid long p with nested elements -->
 	</div>
 </div>
 
 <h3 align="center"> suggestions to improve <a href="http://dev.pinuno.comm.gh"> dev.pinuno.com.gh </a> website </h3>
-<p>dev.pinuno.com.gh is a website that is under development, which is subject to change almost every now and then. dev from the name of the website simply means DEVELOPMENT, which speaks for it self that the site is under construction. <br>
+<p>Dev.pinuno.com.gh is a website that is under development, which is subject to change almost every now and then. dev from the name of the website simply means DEVELOPMENT, which speaks for it self that the site is under construction. <br>
 the website is accessible on all devices in other words the site is mobile friendly, but then i will suggest the following; 
 <ul> <li> Social proof, we should have quote or sayings from folks who have used our product or acquire our service, this can be used to entice people to buy or hire our service if they need,also
 that people can have confidence in us.</li>
@@ -136,14 +140,37 @@ that people can have confidence in us.</li>
   </p>
 
    <hr><!--With the paragraph, hr can stand on its own. Why did you put the <p> around it? to create a horizontal space-->
+   
+   
+   
+
+ <div class="row">
+	<div class="column" style="background-color:lightblue">
+		<p> <iframe src="http://pinuno.com.gh" height="619" width="759"></iframe></p>
+	</div>
+	<div class="column" style="background-color:lightblue">
+	<p>  The website <a href="htttp://www.pinuno.com.gh">www.pinuno.com.gh </a> is a site that almost satisfies most of the requirment of a business website, particular it is 
+a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but
+	each link do not respond to a click with the mouse, which indicate that this website is a <em>static</em> website.
+    we say a site is static when the information is displayed within the same page of the site, beside, it usually written in plain HTML and what is in the
+	code of the page is what is displayed to the user, which makese it sometimes easier to develop.<br> But it requires expect to update it contents, also static website with the absence of 
+  database makes the static site much more speedy and easy to load. we can say that a static site will load faster than a dynamic site, one reason 
+ is that it can be served from the node/computer closest to the browser. according to research about 47% of people expect website to load within 2 seconds 
+ and about 40% of people will not wait for the website to load for longer than 3 seconds. Hence,getting a static website also helps in getting more traffic
+ by reducing abandonment rate caused due to slow loading. 
+</p>
+	</div>
+	
+	
+	
+	
 
  
-<p><iframe src="http://www.pinuno.com.gh" width="770" height="500"> this is </iframe></p><!--Why is this iframe not in a paragraph? please it escaped me, will come to correct it, since i was not done-->
-<p>  The website <a href="htttp://www.pinuno.com.gh">www.pinuno.com.gh </a> is a site that almost satisfies most of the requirment of a business website, particular it is <br> a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but <br>
-	each link do not respond to a click with the mouse, which indicate that this website is a <em>static</em> website.
-    we say a site is static<br>when the information is displayed within the same page of the site beside, it usually written in plain HTML and what is in the <br>code of the page is what is displayed to the user. Which makese it sometimes easier to develop. <br> but it requires expect to update it contents,     
-</p>
-<footer align="center"> <p> cont:0508-232-196, email:m.akyempon@pinuno.com.gh</p></footer>       
-<!--Overall check your spelling, and use report writing guidelines to structure the document-- okay Sir, thanks for the corrections>                    
+
+<div style="background-color:lightgreen;text-align:center;padding:10px;margin-top:7px;">cont:0508-232-196, email:m.akyempon@pinuno.com.gh</div>
+
+<!--Overall check your spelling, and use report writing guidelines to structure the document-- okay Sir, thanks for the corrections>    
+ 
+ 
 </body>
 </html>
