--- a/Final Assignment  3.3.1.html
+++ b/Final Assignment  3.3.1.html
@@ -138,25 +138,23 @@ the website is accessible on all devices in other words the site is mobile frien
 that people can have confidence in us.</li>
 <li> I suggest also that we should have a page of testimonies about client who have used our service.</li>
  <li>I suggest that there should be a page that invloves the team that makes up the company Pinuno Software, people would want to know and trust before doing business, and business is between people 
- so i think we should have a page of our team so that visitors can believe and do business with us.</li> <br>
+ so i think we should have a page of our team so that visitors can believe and do business with us.</li> <br />
  Also is what we called <b>call to Action</b> of which developers of this site makes use of this business terms 
- looking at dev so far, it very simple but contains all the required terms, actions and plans.<br>
- i see social share and follow buttons on this site, most of the things to talk about have been implimented, <br>
- Example using the right images, somethings images do not fit the type of message we are trying to show to our audience but this site <i> dev</i> complies to this. <br>
- Also to discuss is <b> Navigation,</b> navigation is very essential in pages, since it helps site visitors to easily navigate through the webpages, making way for <br>visitors 
+ looking at dev so far, it very simple but contains all the required terms, actions and plans.<br />
+ i see social share and follow buttons on this site, most of the things to talk about have been implimented, <br />
+ Example using the right images, somethings images do not fit the type of message we are trying to show to our audience but this site <i> dev</i> complies to this. <br />
+ Also to discuss is <b> Navigation,</b> navigation is very essential in pages, since it helps site visitors to easily navigate through the webpages, making way for <br />visitors 
 to locate what they are looking for. 
-we have tried to remove <b>Complicated animation</b> since sometimes those images detract from the value and message we are trying to convey.<br> With audience that only has an
-attention span of about few seconds, you have to create the impression that easily gets the main points across, i think this should be done with short, powerful <br> section of the contents
+we have tried to remove <b>Complicated animation</b> since sometimes those images detract from the value and message we are trying to convey.<br /> With audience that only has an
+attention span of about few seconds, you have to create the impression that easily gets the main points across, i think this should be done with short, powerful <br /> section of the contents
 and applicable photographys. and dev is on point with regards to this point.
-<br>
-<br>Few are the points of suggestions about the development of <a href="https://dev.pinuno.com.gh"> dev.pinuno.com.gh</a> which i have made known in the first 3 points from the begining 
-
- 
+<br />
+<br />Few are the points of suggestions about the development of <a href="https://dev.pinuno.com.gh"> dev.pinuno.com.gh</a> which i have made known in the first 3 points from the begining. 
  </ul>
 
   </p>
 
-   <hr><!--With the paragraph, hr can stand on its own. Why did you put the <p> around it? to create a horizontal space-->
+   <hr /> <!--With the paragraph, hr can stand on its own. Why did you put the <p> around it? to create a horizontal space-->
    
    
    
@@ -167,32 +165,32 @@ and applicable photographys. and dev is on point with regards to this point.
 	</div>
 	<div class="column" style="background-color:lightblue">
 	<p id="pinuno.gh">  The website <a href="htttp://www.pinuno.com.gh">www.pinuno.com.gh </a> is a site that almost satisfies most of the requirment of a business website, particular it is 
-a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but
+    a simply website,it contians both footer and header,it also have links on the header describing what is does as a business, but
 	each link do not respond to a click with the mouse, which indicate that this website is a <em>static</em> website.
     we say a site is static when the information is displayed within the same page of the site, beside, it usually written in plain HTML and what is in the
 	code of the page is what is displayed to the user, which makes it sometimes easier to develop.
-	<br> But it requires expect to update it contents, also static website with the absence of 
-  database makes the static site much more speedy and easy to load. we can say that a static site will load faster than a dynamic site, one reason 
- is that it can be served from the node/computer closest to the browser. according to research, about 47% of people expect website to load within 2 seconds 
- and about 40% of people will not wait for the website to load for longer than 3 seconds. Hence,getting a static website also helps in getting more traffic
- by reducing abandonment rate caused due to slow loading. We can also say that static website has inexpensive hosting, servers that are dedicated to this site are cheaper.
- Static website is also not good for long run: What it means is that it not an option for the long as any business would need to make a number of updates.</br> 
- <br>In order to make changes,one would have to change each page file again and of course it's time consuming and take a lot of resources. We do know that static website does not offer all the functionalities<br>
- that a dynamic website can. One can add text, images, videos and hyperlinks in the content but other that, there are no other speacial functions that a static website can perform, as a result we can <br>
-not go beyound the functions that it comes with. Thinking that it must be dynamic because of this reasons;
-<br>
- Dynamic website is developed using advanced server technologies for example PHP, JavaScript or ASP. By dynamic we mean that the site is interactive in nature and changes according to time, geography and <br>
-and user type. Dynamic website can be connected to a large database enabling it to pull information as and when required. Let consider the following 
-<pre>
-1. Easy to update: one reason i suggest to dynamic website for pinuno.com.gh, it can be easily updatd as 
-per the needs of the business owner.
-2. interactive: Dynamic website interact with the user and changes according to behaviour 
-3. Quick to responsivesness: A dynamic website can be quick to update to become responsive to various
+	<br /> But it requires expect to update it contents, also static website with the absence of 
+    database makes the static site much more speedy and easy to load. we can say that a static site will load faster than a dynamic site, one reason 
+    is that it can be served from the node/computer closest to the browser. according to research, about 47% of people expect website to load within 2 seconds 
+    and about 40% of people will not wait for the website to load for longer than 3 seconds. Hence,getting a static website also helps in getting more traffic
+    by reducing abandonment rate caused due to slow loading. We can also say that static website has inexpensive hosting, servers that are dedicated to this site are cheaper.
+    Static website is also not good for long run: What it means is that it not an option for the long as any business would need to make a number of updates.<br /> 
+ <br />In order to make changes,one would have to change each page file again and of course it's time consuming and take a lot of resources. We do know that static website does not offer all the functionalities<br />
+   that a dynamic website can. One can add text, images, videos and hyperlinks in the content but other that, there are no other speacial functions that a static website can perform, as a result we can <br />
+   not go beyound the functions that it comes with. Thinking that it must be dynamic because of this reasons;
+ <br />
+    Dynamic website is developed using advanced server technologies for example PHP, JavaScript or ASP. By dynamic we mean that the site is interactive in nature and changes according to time, geography and <br />
+  and user type. Dynamic website can be connected to a large database enabling it to pull information as and when required. Let consider the following 
+  <pre>
+ 1. Easy to update: one reason i suggest to dynamic website for pinuno.com.gh, it can be easily updatd as 
+ per the needs of the business owner.
+ 2. interactive: Dynamic website interact with the user and changes according to behaviour 
+ 3. Quick to responsivesness: A dynamic website can be quick to update to become responsive to various
  screen size that was inpossible with static 
-4. Smooth navigation: A dynamic website offers a smooth navigation and lets the user jump from one page 
-to the other without any problem.
+ 4. Smooth navigation: A dynamic website offers a smooth navigation and lets the user jump from one page 
+ to the other without any problem.
 </pre>
-but then there is higher cost in their development and even the hosting cost is high, but once developed they would not cost additional money for any changes or updates
+  but then there is higher cost in their development and even the hosting cost is high, but once developed they would not cost additional money for any changes or updates
 </p>
 	</div>
 	
