--- a/assignment-guess_game/index.html
+++ b/assignment-guess_game/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> guessgame_index </title>
+      <title> Guessing game</title>
 </head>
 
-<body>
-<form action="GuessGame.php"  method="POST">
-<h4>Please Enter your name :</h4> 
+<body style=color:blue>
+<div class='header' align="center">
+<h2>GUESSING GAME</h2>
+<p align="center">*************************************************</p>
+</div>
+
+<form action="GuessGame.php" method="POST">
+<h3 align="center">AM GLADE YOU ARE HERE!!!</h3>
+<h4 align="center">Please Enter your name to Begin :</h4> 
 <input type="text" name="name">
-<input type="submit" value="submit Name">
+<input type="submit" value="submit">
 <br/>
 <br/>
-
- <input type="number" name="Guess">
-<input type="submit" name="submit" value="Guess a number">
-
-
-
-
-
-
 </form>
 
-
-
-
-
-
-
-
-
-
+<form>
+ <input type="number" name="Guess">
+<input type="submit" name="submit" value="Guess">
+</form>
 
 
 
