--- a/assignment-guess_game/index.html
+++ b/assignment-guess_game/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title> Guessing game</title>
+      <title> The Guess Game</title>
 </head>
 
-<body style=color:blue>
-<div class='header' align="center">
-<h2>GUESSING GAME</h2>
-<p align="center">*************************************************</p>
-</div>
+
 
 <form action="GuessGame.php" method="POST">
-<h3 align="center">AM GLADE YOU ARE HERE!!!</h3>
+<h3 align="center">Welcome To The Guess Game</h3>
 <h4 align="center">Please Enter your name to Begin :</h4> 
 <input type="text" name="name">
 <input type="submit" value="submit">
 <br/>
-<br/>
+
 </form>
-
-<form>
- <input type="number" name="Guess">
-<input type="submit" name="submit" value="Guess">
-</form>
-
-
 
 
 </body>
